hopefully fixed video on mobile

--- a/style/main.css
+++ b/style/main.css
@@ -579,6 +579,11 @@ footer > img {
     .profile-picture img {
         width: 75px;
     }
+
+    #hero-video {
+        width: unset;
+        height: 100vh;
+    }
 }
 
 @media only screen and (max-width: 900px) {
